[project]
name = "llmprover"
version = "0.1.0"
description = "Rocq theorem proving demonstrator driven by an LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "mistralai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmprover*"]

[tool.setuptools.package-data]
llmprover = ["prover_agents/prompts/*.txt"]
